<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/baseline_search_24"/>

    <item
        android:id="@+id/sort_options"
        android:title="@string/sort_by"
        app:showAsAction="never">
    <menu>

        <item
        android:id="@+id/name"
        android:title="@string/by_name"
        app:showAsAction="never"/>

        <item
        android:id="@+id/date"
        android:title="@string/by_date"
        app:showAsAction="never"/>

        <item
        android:id="@+id/size"
        android:title="@string/by_size"
        app:showAsAction="never"/>



    </menu>

</item>

</menu>